--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
  box-shadow: 5px 5px 10px;
  box-shadow: black;
  background-color: #35648C;
+ font-family: 'Oswald', sans-serif;
 }
 
 .community{
